# pyroma621

./: .coverage  .gitignore  .pre-commit-config.yaml  .semgrep.yml  CHANGES.txt  DEVELOPMENT.rst  MANIFEST.in  Makefile  README.md  README.rst  UPGRADING.rst  pyproject.toml  setup.cfg  tox.ini  zensical.toml
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
docs/: changelog.md  development.md  rules.md  upgrading.md
pyroma/: __init__.py  __main__.py  _types.py  config.py  distributiondata.py  metadata.py  projectdata.py  pypidata.py  ratings.py  report.py  rules.py  tests.py
pyroma/testdata/bad_console_scripts/: pyproject.toml
pyroma/testdata/complete/: pyproject.toml
pyroma/testdata/dev_extras/: pyproject.toml
pyroma/testdata/distributions/: complete-1.0.dev1.tar  complete-1.0.dev1.tar.bz2
pyroma/testdata/dynamic_name/: pyproject.toml
pyroma/testdata/invalid_pyproject/: pyproject.toml
pyroma/testdata/jsondata/: complete.json
pyroma/testdata/missing_license_file/: pyproject.toml
pyroma/testdata/no_build_backend/: pyproject.toml
pyroma/testdata/readme_both/: pyproject.toml
pyroma/testdata/readme_type_mismatch/: pyproject.toml
pyroma/testdata/uv_build/: README.txt  pyproject.toml
pyroma/testdata/uv_build/src/pyroma_uv_build_test_pkg/: __init__.py
pyroma/testdata/uv_build/src/pyroma_uv_test_pkg/: __init__.py
