[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pyroma"
version = "5.1b3.dev0"
description = "Test your project's packaging friendliness"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Lennart Regebro", email = "regebro@gmail.com" },
]
keywords = ["pypi", "quality", "testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "build>=1.0",
    "docutils>=0.22",
    "packaging",
    "pygments",
    "pyproject_hooks",
    "requests",
    "tomli; python_version < '3.11'",
    "trove-classifiers>=2022.6.26",
    "validate-pyproject>=0.16",
]

[project.urls]
Homepage = "https://github.com/regebro/pyroma"
"Source Code" = "https://github.com/regebro/pyroma"

[project.optional-dependencies]
test = [
    "flit_core>=3.4,<4",
    "mypy",
    "pytest",
    "pytest-cov",
    "setuptools>=77",
    "tox",
    "types-requests",
    "zest.releaser[recommended]",
]

[project.scripts]
pyroma = "pyroma:main"

[project.entry-points."zest.releaser.prereleaser.before"]
pyroma = "pyroma:zester"

[tool.setuptools.packages.find]
include = ["pyroma"]

[tool.pytest.ini_options]
testpaths = ["pyroma/tests.py"]

[tool.check-manifest]
ignore = [".pre-commit-hooks.yaml"]

[tool.zest-releaser]
create-wheel = true

[tool.ruff]
line-length = 120
extend-exclude = ["pyroma/testdata"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "B904", # raise-without-from-inside-except; the bare messages are intentional user-facing errors
]

[tool.coverage.run]
source = ["pyroma"]
omit = ["pyroma/tests.py", "pyroma/testdata/*"]

[tool.coverage.report]
show_missing = true
fail_under = 78

[tool.mypy]
python_version = "3.10"
packages = ["pyroma"]
exclude = ["testdata"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "build.*",
    "check_manifest",
    "docutils.*",
    "pyproject_hooks",
    "tomli",
    "trove_classifiers",
    "validate_pyproject.*",
    "zest.releaser.*",
]
ignore_missing_imports = true
