[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pyroma"
version = "5.1b3.dev0"
description = "Test your project's packaging friendliness"
readme = "README.rst"
authors = [{name = "Lennart Regebro", email = "regebro@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["pypi", "quality", "testing"]
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.11"
dependencies = [
    "build>=0.7.0",
    "docutils>=0.22",
    "packaging>=24.2",
    "pygments",
    "requests",
    "trove-classifiers>=2022.6.26",
    "validate-pyproject>=0.16",
]

[project.optional-dependencies]
test = [
    "check-manifest",
    "pytest",
    "pytest-cov",
    "setuptools>=77",
    "zest.releaser[recommended]",
    "flit_core>=3.4,<4",
    "uv_build>=0.8.0,<1.0",
    "tox",
]

[dependency-groups]
lint = ["ruff==0.15.22"]
typecheck = ["ty==0.0.61", "pyrefly==1.1.1", "types-docutils"]

[tool.uv]
required-version = "==0.7.13"

[project.urls]
Homepage = "https://github.com/regebro/pyroma"
"Source Code" = "https://github.com/regebro/pyroma"

[project.scripts]
pyroma = "pyroma:main"

[project.entry-points."zest.releaser.prereleaser.before"]
pyroma = "pyroma:zester"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pyroma = ["py.typed"]

[tool.setuptools.packages.find]
include = ["pyroma*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["pyroma/tests.py"]

[tool.check-manifest]
ignore = [".pre-commit-hooks.yaml"]

[tool.zest-releaser]
create-wheel = true

[tool.ty.src]
include = ["pyroma"]
exclude = ["pyroma/testdata", "pyroma/tests.py"]

[tool.pyrefly]
project-includes = ["pyroma"]
project-excludes = ["pyroma/testdata/**", "pyroma/tests.py"]

[tool.pyrefly.errors]
# The str() calls on metadata values are deliberate runtime defenses:
# the Metadata TypedDict is aspirational for JSON-sourced data.
unnecessary-type-conversion = false

[tool.ruff]
line-length = 120
extend-exclude = ["pyroma/testdata"]

[tool.ruff.lint]
extend-select = ["A001", "ANN202", "B", "FBT003", "I", "PT027", "RUF059", "UP"]

[tool.ruff.lint.per-file-ignores]
"pyroma/tests.py" = ["ANN202", "FBT003", "PT027", "RUF059"]
