[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[project]
name = "pyroma621"
version = "6.0.0"
description = "Test your project's packaging friendliness"
readme = "README.md"
authors = [
    {name = "Harold Martin", email = "harold.martin@gmail.com"},
    {name = "Lennart Regebro", email = "regebro@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
keywords = ["pypi", "quality", "testing"]
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.11"
dependencies = [
    "build>=0.7.0",
    "docutils>=0.22",
    "packaging>=24.2",
    "pygments>=2.19",
    "requests>=2.32",
    "trove-classifiers>=2022.6.26",
    "validate-pyproject>=0.16",
]

[project.optional-dependencies]
test = [
    "check-manifest",
    "hypothesis>=6.156.7",
    "pytest",
    "pytest-cov",
    "setuptools>=77",
    "zest.releaser[recommended]",
    "flit_core>=3.4,<4",
    "uv_build>=0.11.28,<0.12.0",
    "tox",
]

[dependency-groups]
docs = ["zensical>=0.0.50"]
dev = [
    "deptry>=0.25.1",
    "hypothesis>=6.156.7",
    "lizard>=1.23.0",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff==0.15.22",
    "ty>=0.0.61",
]
lint = ["ruff==0.15.22"]
quality = ["deptry>=0.25.1", "lizard>=1.23.0", "semgrep==1.170.0"]
typecheck = ["pyrefly>=1.1.1", "ty>=0.0.61", "types-docutils"]

[tool.uv.build-backend]
module-name = "pyroma"
module-root = ""
source-include = ["docs/**", "Makefile", "tox.ini", "zensical.toml"]

[project.urls]
Homepage = "https://github.com/hbmartin/pyroma621"
"Source Code" = "https://github.com/hbmartin/pyroma621"
Documentation = "https://hbmartin.github.io/pyroma621/"
Changelog = "https://hbmartin.github.io/pyroma621/changelog/"
Issues = "https://github.com/hbmartin/pyroma621/issues"

[project.scripts]
pyroma = "pyroma:main"

[project.entry-points."zest.releaser.prereleaser.before"]
pyroma = "pyroma:zester"

[tool.pytest.ini_options]
testpaths = ["pyroma/tests.py"]

[tool.check-manifest]
ignore = [".pre-commit-config.yaml", ".pre-commit-hooks.yaml", ".semgrep.yml"]

[tool.deptry]
extend_exclude = ["pyroma/testdata", "pyroma/tests.py"]
known_first_party = ["pyroma"]
optional_dependencies_dev_groups = ["test"]

[tool.deptry.per_rule_ignores]
# zest.releaser calls this optional integration hook when it is installed.
DEP001 = ["zest"]
# Pygments is loaded indirectly by docutils for syntax-highlighted content.
DEP002 = ["pygments"]
# These development-only packages enable optional and conditional integrations.
DEP004 = ["check_manifest", "zest"]

[tool.zest-releaser]
create-wheel = true
history-file = "docs/changelog.md"
history_format = "md"

[tool.ty.src]
include = ["pyroma"]
exclude = ["pyroma/testdata", "pyroma/tests.py"]

[tool.pyrefly]
project-includes = ["pyroma"]
project-excludes = ["pyroma/testdata/**", "pyroma/tests.py"]

[tool.pyrefly.errors]
# The str() calls on metadata values are deliberate runtime defenses:
# the Metadata TypedDict is aspirational for JSON-sourced data.
unnecessary-type-conversion = false

[tool.ruff]
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "papers PDFs", "setup.py", "site-packages", "venv"]
line-length = 120
extend-exclude = ["pyroma/testdata"]
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"pyroma/__init__.py" = ["T201"]
"pyroma/tests.py" = ["ANN202", "D", "FBT003", "PT009", "PT027", "RUF059", "SLF001"]
