[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bad-console-scripts"
version = "1.0"
description = "A package that puts console scripts in the wrong table"

# Invalid: console scripts must go in [project.scripts]
[project.entry-points.console_scripts]
bad = "bad:main"
