[build-system]
requires = ["uv_build>=0.8.0,<1.0"]
build-backend = "uv_build"

[project]
name = "pyroma_uv_build_test_pkg"
version = "1.0"
description = "This is a test package for pyroma"
readme = "README.txt"
authors = [{name = "Lennart Regebro", email = "regebro@gmail.com"}]
classifiers = [
    "Development Status :: 6 - Mature",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "pypi",
    "quality",
    "example",
]
license = "MIT"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/regebro/pyroma"
