[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "pyroma-uv-test-pkg"
version = "1.0"
description = "This is a test package for pyroma"
readme = "README.txt"
license = "MIT"
authors = [{name = "Lennart Regebro", email = "regebro@gmail.com"}]
classifiers = [
    "Development Status :: 6 - Mature",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "pypi",
    "quality",
    "example",
]
urls = {Homepage = "https://github.com/regebro/pyroma", Source = "https://github.com/regebro/pyroma"}
requires-python = ">=3.10"
